Closed Bug 12236 Opened 26 years ago Closed 26 years ago

With the new message display format, you can no longer select msg text

Categories

(MailNews Core :: MIME, defect, P3)

All
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: mscott, Assigned: mscott)

Details

After Rich landed his new message display code, we lost the ability to select text in the message. Simon Fraser pointed this out to me. To see just display a message. Try to select text in the body. You'll notice that you can't. The fix is pretty easy. We weren't setting the type on the iframe for the message body to be content-primary. I have a fix in my tree once it opens.
Status: NEW → ASSIGNED
Target Milestone: M10
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
I've checked in the fix for this. You should now be able to select body text in the message pane.
Status: RESOLVED → VERIFIED
OK m10 all platforms 1999-10-01-18 m18 linux 6.0 1999-10-03-20 m10 NT 4.0 1999-10-01-20 m10 mac OS 8.5.1
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.