Fix for Bug #12236 --> set iframe type to content-primary.